--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/assets/images/favicon.ico" />
 
     {% capture page_title %}
-      {% if page.title %}
+      {% if page.title != "" %}
         {{ page.title }} - diaspora* federation protocol
       {% else %}
         diaspora* federation protocol
@@ -43,7 +43,7 @@
           </nav>
         </div>
         <div class="col-sm-9 docbody">
-          {% if page.title %}
+          {% if page.title != "" %}
             <h1>{{ page.title }}</h1>
           {% endif %}
 
