--- a/docs/assets/css/main.scss
+++ b/docs/assets/css/main.scss
@@ -32,7 +32,7 @@ body {
   }
 
   h2 {
-    border-top: 1px solid #0f0f0f;
+    border-top: 1px solid #222;
     margin-top: 30px;
     padding-top: 25px;
   }
